(feat) updating collapse size of menu and fixed paddings

--- a/src/public/styles/styles.css
+++ b/src/public/styles/styles.css
@@ -32,15 +32,6 @@ body {
   background: linear-gradient(to bottom right, #fff, #fff, #e5e5e5);
 }
 
-.navbar {
-  border: none;
-  position: relative;
-  background-color: #282828;
-  padding: 5px;
-  margin-bottom: 0px;
-  border-radius: 0 !important;
-}
-
 .app-body {
   padding-bottom: 70px;
 }
@@ -55,40 +46,6 @@ body {
   align-content: center;
 }
 
-/*--------- bootstrap CSS changes -------*/
-
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: #aaaaaa;  /*Sets the text hover color on navbar*/
-}
-
-/*-- sets the nav buttons--*/
-.navbar-default .navbar-nav > li > a {
-  color: white; /*Change active text color here*/
-  background-color: #282828;
-}
-
-.navbar .navbar-default > .container > .navbar-header > li.navbar-brand > a {
-  background-color: #282828;
-}
-
-/*removes bullet from home button*/
-.navbar >.container .navbar-brand {
-  list-style-type: none;
-}
-
-/*update color of home button*/
-.navbar >.container .navbar-brand > a {
-  color: white;
-  text-decoration: none;
-}
-
-/*update hover effects of home button*/
-.navbar >.container .navbar-brand > a:hover {
-  color: #aaaaaa;
-  text-decoration: none;
-}
-
-/* ==== CSS for new navbar being built ==== */
 .nav-bar {
   color: white;
   background-color: #282828;
@@ -107,21 +64,11 @@ body {
 @media screen and (max-width: 1200px) {
 
   .nav-content {
-    width: 96%;
-    margin: auto;
+    width: 90%;
+    margin: 0 5%;
   }
 
 }
-
-/* create the hamberger menu at 550 */
-/* @media screen and (max-width: 550px) {
-
-  .nav-content {
-    width: 96%;
-    margin: auto;
-  }
-
-} */
 
 .nav-home {
   font-size: 1.25rem;
@@ -150,7 +97,7 @@ body {
   width: 100%;
   /* height: 40px; */
   /* line-height: 40px; */
-  padding-left: 5%;
+  padding-left: 10%;
   background-color: #282828;
 }
 
